# aliciadata-chat-admin

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
migrations/: 001_create_documents_table.sql
src/: __init__.py  app.py  db.py
tests/: __init__.py  test_db.py
