[project]
name = "aliciadata-chat-admin"
version = "0.1.0"
description = "Gradio-based CRUD application for PostgreSQL documents table"
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.0.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "pytest>=7.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
